[tool.poetry]
name = "flask-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "flask_test"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-restful = "^0.3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
